fix: add bisheng

--- a/build-profile.json5
+++ b/build-profile.json5
@@ -16,6 +16,7 @@
       {
         "name": "release",
         "buildOption": {
+          "nativeCompiler": "BiSheng",
           "nativeLib": {
             "debugSymbol": {
               "strip": true,
